# riscv-spec-parameter-extractor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: gold_reference.yaml
data/spec_excerpts/: machine_counters.md  machine_counters.metadata.yaml
docs/: architecture.md  engineering-decisions.md  gold-reference-schema.md  gold-reference.md  implementation_plan.md  methodology.md  proposal.md
prompts/: current.md  v1.md
results/: evaluation.md
results/raw/: candidates.yaml
src/: __init__.py  cli.py
src/evaluation/: __init__.py  diff.py  metrics.py
src/extractor/: __init__.py  backends.py  run_extraction.py
tests/: __init__.py  test_diff.py  test_extraction.py  test_gold.py  test_metrics.py
