[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riscv-param-extractor"
version = "0.1.0"
description = "LLM-based extraction of architectural parameters from RISC-V specification text, with evaluation harness."
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
]
all = [
    "riscv-param-extractor[gemini,openai,dev]",
]

[project.scripts]
riscv-param-extractor = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
